--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,10 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es2016",
-    "module": "commonjs",
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true
+    "module": "commonjs",
+    "target": "es6",
+    "types": ["node", "express"]
   }
 }
