--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node server/index.ts",
+    "dev": "nodemon server/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start":"nodemon server/index.ts",
     "build": "npm install && npm install --prefix client && npm run build --prefix client"
