--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec ts-node server/index.ts",
-    "build":"npm install && npm install --prefix client && npm run build --prefix client",
+    "build": "npm install && tsc && npm install --prefix client && npm run build --prefix client",
+    "start": "ts-node server/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
