--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "scripts": {
+    "start": "node dist/server/index.js",
     "dev": "nodemon --exec ts-node server/index.ts",
-    "build": "npm install && tsc && npm install --prefix client && npm run build --prefix client",
-    "start": "ts-node server/index.ts",
+    "build": "npm install && tsc && cd client && npm install && npm run build && cd ..",
+    "postinstall": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -32,7 +36,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/multer": "^1.4.12",
-    "@types/node": "^22.10.2",
+    "@types/node": "^22.10.5",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
